# iop-location-based-network

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.arm7  Dockerfile.libspatiallite-arm7-build  Dockerfile.x86  README.md  build.sh  mkn.yaml  pack-common.sh  pack-ubuntu1604.sh  pack-ubuntu1610.sh
doc/: DeveloperGuide.md  Docker.MD  INSTALL.md  TODO.md  docker.MD
docker/: iop-loc.yaml  run.sh
extlib/: catch.hpp  ezOptionParser.hpp
package/libprotobuf3/: description-pak  pack-common.sh  pack-ubuntu1404.sh  pack-ubuntu1604.sh
package/locnet/: description-pak  pack-common.sh  pack-ubuntu1404.sh  pack-ubuntu1604.sh
src/: CMakeLists.txt  IopLocNet.proto  basic.cpp  basic.hpp  config.cpp  config.hpp  generate-iop-locnet-config.py  geonet.cpp  geonet.hpp  locnet.cpp  locnet.hpp  main.cpp  messaging.cpp  messaging.hpp  network.cpp  network.hpp  node.cpp  node.h  node.hpp  server.cpp  server.hpp  spatialdb.cpp  spatialdb.hpp
test/: CMakeLists.txt  dummynode.cpp  dummynode.hpp  gendb.cpp  sampleclient.cpp  samplelocalclient.cpp  samplenodeclient.cpp  sampleserver.cpp  test.cpp  test_concept.cpp  test_locnet.cpp  test_main.cpp  test_messaging.cpp  test_network.cpp  testdata.cpp  testdata.hpp  testimpls.cpp  testimpls.hpp
test/cfg/: BudapestNode.cfg  CapeTownNode.cfg  KecskemetNode.cfg  LondonNode.cfg  NewYorkCloneNode.cfg  NewYorkNode.cfg  WienSeed.cfg
win/: mkn.yaml
win/lib/: libsqlite3-0.def  libsqlite3-0.exp  libsqlite3-0.lib  mod_spatialite.def  mod_spatialite.exp  mod_spatialite.lib
win/protobuf-cpp-3.0.0/: mkn.yaml
